minigu/binder/src/program/snapshots/minigu_binder__program__tests__query-2.snap
---
source: minigu/binder/src/program/mod.rs
assertion_line: 335
expression: stmt
---
Ok:
  at: ~
  binding_variable_def: []
  statement:
    Query:
      Primary:
        Ambient:
          Parts:
            parts:
              - Match:
                  Simple:
                    pattern:
                      match_mode: ~
                      patterns:
                        - variable: ~
                          prefix: ~
                          expr:
                            Concat:
                              - Pattern:
                                  Node:
                                    variable: n
                                    label:
                                      Label: 1
                                    predicate:
                                      Property:
                                        - id: 1
                                          value:
                                            Value:
                                              Literal:
                                                Numeric: 12
                      keep: ~
                      where_clause: ~
                    yield_item: []
            result:
              Return:
                statement:
                  quantifier: ~
                  items:
                    Items:
                      - value:
                          Property:
                            source:
                              Variable: n
                            trailing_names:
                              - createTime
                        alias: createTime
                      - value:
                          Property:
                            source:
                              Variable: n
                            trailing_names:
                              - isBlocked
                        alias: isBlocked
                      - value:
                          Property:
                            source:
                              Variable: n
                            trailing_names:
                              - type
                        alias: type
                  group_by: ~
  next_statement: []
