minigu/binder/src/program/snapshots/minigu_binder__program__tests__schema_create_and_drop-4.snap
---
source: minigu/binder/src/program/mod.rs
assertion_line: 231
expression: stmt
---
Ok:
  at: ~
  binding_variable_def: []
  statement:
    Catalog:
      - CreateSchema:
          path:
            segments:
              - foo
          if_not_exists: false
  next_statement:
    - yield_clause: ~
      statement:
        Catalog:
          - CreateSchema:
              path:
                segments:
                  - fee
              if_not_exists: false
