minigu/binder/src/program/snapshots/minigu_binder__program__tests__schema_create_and_drop.snap
---
source: minigu/binder/src/program/mod.rs
assertion_line: 244
expression: stmt
---
Ok:
  at: ~
  binding_variable_def: []
  statement:
    Catalog:
      - CreateSchema:
          path:
            segments:
              - a
              - b
              - c
          if_not_exists: true
  next_statement: []
